Game state gets reflected in the DOM

--- a/style.css
+++ b/style.css
@@ -47,4 +47,9 @@ footer a:hover {
 
 .square {
     border: 1px solid grey;
+    font-size: 128px;
+    color: black;
+    display: flex;
+    justify-content:  center;
+    align-items:  center;
 }
