Add ability for the game to be disabled on the DOM side and for the player to reset the game

--- a/style.css
+++ b/style.css
@@ -53,3 +53,12 @@ footer a:hover {
     justify-content:  center;
     align-items:  center;
 }
+
+#reset-button {
+    justify-self: center;
+    padding: 8px 16px 8px 16px;
+    font-size: 20px;
+    background-color: darkgrey;
+    border-style:  none;
+    visibility: hidden;
+}
