Change way of hiding the reset button.

--- a/style.css
+++ b/style.css
@@ -60,5 +60,5 @@ footer a:hover {
     font-size: 20px;
     background-color: darkgrey;
     border-style:  none;
-    visibility: hidden;
+    display: none;
 }
