Add a status text that shows who's turn it currently is & if the match ended in a tie or who won.

--- a/style.css
+++ b/style.css
@@ -62,3 +62,9 @@ footer a:hover {
     border-style:  none;
     display: none;
 }
+
+#status {
+    justify-self: center;
+    margin: 8px;
+    font-size: larger;
+}
